@@ -1,5 +1,10 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.598 2006/04/17 21:41:43 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.599 2006/04/18 20:38:24 wolf31o2 Exp $
+
+  18 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/support/chroot-functions.sh:
+  Fixed fetchonly option for stages 1 through 3 and livecd-stage1, and
+  possibly others.
 
   17 Apr 2006; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/stage1/build.py:
